@@ -7,6 +7,7 @@ Version 1.12.5+dev:
    * Revert all updates to hot-key handling which broke letter-based short-cuts
      on non-US keyboard layouts, where characters are in different key
      locations (bug #24186).
+   * Fix the move-to-targets candidate action of the default AI ignoring tunnels
 
 Version 1.12.5:
  * Campaigns:
